security: CORS production da faqat primestroy.uz ga cheklandi
- SecurityConfig: app.cors.allowed-origins property dan o'qiydi
- Dev: * (lokal tarmoq), Prod: https://primestroy.uz
- Swagger va Actuator prod da allaqachon cheklangan edi

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>